[gd_scene load_steps=2 format=3 uid="uid://bcc2n6joxf2ce"]

[ext_resource type="Script" uid="uid://bjeycp8wip756" path="res://control.gd" id="1_0fbet"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_0fbet")

[node name="Container" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(180, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -101.5
offset_top = -58.5
offset_right = 101.5
offset_bottom = 58.5
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Container"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="Container/MarginContainer"]
layout_mode = 2

[node name="BT_ATACAR" type="Button" parent="Container/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "ATACAR"

[node name="BT_DEFENDER" type="Button" parent="Container/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "DEFENDER"

[node name="BT_OBJETOS" type="Button" parent="Container/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "OBJETOS"

[connection signal="button_down" from="Container/MarginContainer/VBoxContainer/BT_ATACAR" to="." method="_on_bt_atacar_button_down"]
[connection signal="button_down" from="Container/MarginContainer/VBoxContainer/BT_DEFENDER" to="." method="_on_bt_defender_button_down"]
[connection signal="button_down" from="Container/MarginContainer/VBoxContainer/BT_OBJETOS" to="." method="_on_bt_objetos_button_down"]
